--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -22,7 +22,7 @@
                 <%= checklist.name %>
               </p>
               <p class="subtitle is-size-6">
-                <%= checklist.tasks.count %> Tarefas
+                <%= checklist.tasks.length %> Tarefas
               </p>
             </div>
             <footer class="card-footer">
